tests/baselines/reference/genericCallsWithoutParens.errors.txt
tests/cases/compiler/genericCallsWithoutParens.ts(2,18): error TS1005: '(' expected.
tests/cases/compiler/genericCallsWithoutParens.ts(7,22): error TS1005: '(' expected.


==== tests/cases/compiler/genericCallsWithoutParens.ts (2 errors) ====
    function f<T>() { }
    var r = f<number>; // parse error
                     ~
!!! error TS1005: '(' expected.
    
    class C<T> {
        foo: T;
    }
    var c = new C<number>; // parse error
                         ~
!!! error TS1005: '(' expected.
    
    